--- a/tools/gpt_image_text_to_image.yaml
+++ b/tools/gpt_image_text_to_image.yaml
@@ -6,9 +6,9 @@ identity:
     zh_Hans: gpt-image-1 / 文生图
 description:
   human:
-    en_US: Generate images from text prompts using OpenAI GPT-Image-1 model via GPTProto API.
-    zh_Hans: 使用 OpenAI GPT-Image-1 模型通过 GPTProto API 根据文本提示生成图片。
-  llm: Generate images from text prompts using OpenAI GPT-Image-1 model. This tool creates high-quality images based on detailed text descriptions.
+    en_US: Generate images from text prompts using OpenAI GPT-Image-1 model. Supports quality levels (low/medium/high), multiple sizes (1024x1024, 1536x1024, 1024x1536), and transparent/opaque background options.
+    zh_Hans: 使用 OpenAI GPT-Image-1 模型根据文本提示生成图片。支持质量等级（低/中/高）、多种尺寸（1024x1024、1536x1024、1024x1536）以及透明/不透明背景选项。
+  llm: Generate images from text prompts using OpenAI GPT-Image-1 model. Features adjustable quality levels, multiple output sizes, and background transparency control. Ideal for creating artwork, product images, and visual content with precise control.
 parameters:
   - name: prompt
     type: string
