--- a/tools/sora_image_to_video.yaml
+++ b/tools/sora_image_to_video.yaml
@@ -3,12 +3,12 @@ identity:
   author: gptproto
   label:
     en_US: sora-2 / image-to-video
-    zh_Hans: sora-2 / image-to-video
+    zh_Hans: sora-2 / 图生视频
 description:
   human:
-    en_US: Generate videos from images using OpenAI Sora 2 model via GPTProto API.
-    zh_Hans: 使用 OpenAI Sora 2 模型通过 GPTProto API 根据图片生成视频。
-  llm: Generate videos from images using OpenAI Sora 2 model. This tool creates high-quality videos based on input images and text prompts describing the motion.
+    en_US: Animate images into cinematic videos using OpenAI Sora 2 model. Supports multiple durations (5/10/20s), orientations (landscape/portrait/square), and resolutions (480p/720p/1080p). Optional character motion reference.
+    zh_Hans: 使用 OpenAI Sora 2 模型将图片转换为电影级视频。支持多种时长（5/10/20秒）、方向（横屏/竖屏/正方形）和分辨率（480p/720p/1080p）。可选角色动作参考。
+  llm: Animate static images into cinematic videos using OpenAI Sora 2 model. Use the input image as the starting frame and describe the motion to apply. Features customizable duration, orientation, and resolution with optional character motion reference.
 parameters:
   - name: prompt
     type: string
